--- a/css/header.css
+++ b/css/header.css
@@ -1,17 +1,23 @@
 .header-logo {
-    height: 50%;
+    height: 1.5em;
 }
 
 .header-links {
     display: flex;
-    width: 50%;
 }
 
 .header-links a {
     text-align: center;
-    vertical-align: middle;
-    color: black;
-    margin: 5%;
+    /* vertical-align: middle; */
+    color: var(--dark);
+    background-color: var(--light);
+    padding: 5%;
+    transition: color 300ms, background-color 300ms;
+}
+
+.header-links a:hover {
+    color: var(--light);
+    background-color: var(--dark);
 }
 
 header {
@@ -19,7 +25,7 @@ header {
     align-items: center;
     justify-content: space-evenly;
     width: 100%;
-    height: 3em;
+    flex-wrap: wrap;
     background-color: var(--light);
 }
 
