--- a/css/home.css
+++ b/css/home.css
@@ -1,8 +1,9 @@
-.display-box {
+.feature-section {
     display: flex;
     width: 100%;
     height: 50%;
-    margin: 5%;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .background {
@@ -14,14 +15,16 @@
 }
 
 .neumorphic {
-    box-shadow:  20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
+    box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
 }
 
 .description {
-    width: min(50%, 500px);
+    /* width: min(50%, 500px); */
+    width: 40%;
     padding: 5%;
     background-color: var(--light);
     border-radius: 5px;
+    transition: transform 600ms ease-in-out;
 }
 
 .logo {
