added margin to description box

--- a/css/home.css
+++ b/css/home.css
@@ -20,8 +20,9 @@
 
 .description {
     /* width: min(50%, 500px); */
-    width: 40%;
+    width: 30%;
     padding: 5%;
+    margin: 5%;
     background-color: var(--light);
     border-radius: 5px;
     transition: transform 600ms ease-in-out;
