--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 
 :root {
     --dark: #040d21;
-    --light: #fff;
+    --light: #f6f6f6;
     --palette1: #f7ede6;
     --palette2: #f34e4f;
     --palette3: #2f494a;
@@ -12,6 +12,7 @@
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
+    color: var(--dark);
 }
 
 h1 {
@@ -21,6 +22,8 @@ h1 {
 
 a {
     font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    color: var(--black);
     text-decoration: none;
 }
 
@@ -39,16 +42,65 @@ a {
     background-image: -webkit-linear-gradient(70deg, #db469f,#2188ff);
 }
 
-.wide-block {
+.section {
+    margin-top: 20%;
+}
+
+.section section {
+    padding: 5%;
+    width: 90%;
+}
+
+.section section * {
+    margin: 0px;
+}
+
+.section svg:first-child {
     display: block;
-    width: 100%;
-    height: 500px;
 }
 
-.dark {
-    
+.section svg:last-child {
+    display: block;
+    transform: scaleY(-1);
 }
 
-.light {
+.dark.section section {
+    background-color: var(--dark);
+}
+
+.dark.section svg:first-child path {
+    color: var(--dark);
+}
+
+.dark.section svg:last-child path {
+    color: var(--dark);
+}
+
+.dark.section section * {
+    color: var(--light);
+}
+
+.light.section section {
     background-color: var(--light);
+}
+
+.light.section svg:first-child path {
+    color: var(--light);
+}
+
+.light.section svg:last-child path {
+    color: var(--light);
+}
+
+.light.section section * {
+    color: var(--dark);
+}
+
+.info-block {
+    display: block;
+    width: 50%;
+}
+
+.info-block h1 {
+    font-size: min(10vw);
 }
