--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,10 @@ a {
     text-decoration: none;
 }
 
+.neumorphic {
+    box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
+}
+
 .gradient-text {
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
@@ -40,6 +44,20 @@ a {
 
 .pink-blue-gradient {
     background-image: -webkit-linear-gradient(70deg, #db469f,#2188ff);
+}
+
+.big-button {
+    padding: 10px;
+    margin: 10px;
+    width: max(10%, 100px);
+    text-align: center;
+    border-radius: 5px;
+    background-color: var(--dark);
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: var(--light);
+    text-decoration: none;
+    box-shadow: 0 0 0 1px rgba(53,72,91,.1),0 3px 2px rgba(0,0,0,.04),0 7px 5px rgba(0,0,0,.02),0 13px 10px rgba(0,0,0,.02),0 22px 17px rgba(0,0,0,.02);
 }
 
 .section {
