--- a/src/messenger-app/src/app/message-list/message-list.component.html
+++ b/src/messenger-app/src/app/message-list/message-list.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let message of messages">
+<div *ngFor="let message of messages" class="message-list-item">
     <p>{{ message.author.username }}</p>
-    <p>{{ message.content }} </p>
+    <p>{{ message.content }}</p>
 </div>
