--- a/src/messenger-app/src/app/message-list/message-list.component.scss
+++ b/src/messenger-app/src/app/message-list/message-list.component.scss
@@ -1,10 +1,27 @@
-div {
-    display: flex;
-    border: 1px solid grey;
-    width: 100%;
+.message-list-item:first-child {
+    border-top: 1px solid grey;
 }
 
-div * {
+.message-list-item {
+    display: flex;
+    border: 1px solid grey;
+    border-top: 0;
+    width: 100%;
+    height: 5%;
+    align-items: center;
+}
+
+.message-list-item p {
     margin: 0;
     padding: 1%;
+}
+
+.message-list-item p:first-child {
+    width: 10%;
+    flex-shrink: 0;
+    overflow-wrap: break-word;
+}
+
+.message-list-item :last-child {
+    flex-grow: 10;
 }
