added basic structure

--- a/src/messenger-app/src/app/small-profile/small-profile.component.html
+++ b/src/messenger-app/src/app/small-profile/small-profile.component.html
@@ -1,1 +1,4 @@
-<p>small-profile works!</p>
+<div>
+    <img [src]="requireUser().pfpDataURL" alt="">
+    <p>{{ requireUser().username }}</p>
+</div>
