--- a/src/messenger-app/src/app/small-profile/small-profile.component.scss
+++ b/src/messenger-app/src/app/small-profile/small-profile.component.scss
@@ -1,7 +1,5 @@
-div {
-    display: flex;
-}
-
-div * {
-    width: 50%;
+img {
+    width: 5vh;
+    height: 5vh;
+    border-radius: 2.5vh; // make image circular
 }
