--- a/src/messenger-app/src/styles.scss
+++ b/src/messenger-app/src/styles.scss
@@ -1,1 +1,50 @@
-/* You can add global styles to this file, and also import other style files */
+/* import fonts */
+@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Noto+Sans:wght@400;700&family=Roboto:wght@100;300;400&display=swap');
+
+:root {
+    --dark: #040d21;
+    --light: #f6f6f6;
+    --palette1: #f7ede6;
+    --palette2: #f34e4f;
+    --palette3: #2f494a;
+}
+
+body {
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+    color: var(--dark);
+}
+
+h1 {
+    font-family: 'Noto sans', sans-serif;
+    font-weight: 700;
+}
+
+a {
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    color: var(--black);
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+.neumorphic {
+    box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
+}
+
+.big-button {
+    padding: 10px;
+    margin: 10px;
+    width: max(10%, 100px);
+    text-align: center;
+    border-radius: 5px;
+    background-color: var(--dark);
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: var(--light);
+    text-decoration: none;
+    box-shadow: 0 0 0 1px rgba(53,72,91,.1),0 3px 2px rgba(0,0,0,.04),0 7px 5px rgba(0,0,0,.02),0 13px 10px rgba(0,0,0,.02),0 22px 17px rgba(0,0,0,.02);
+}
