--- a/src/messenger-app/src/app/register/register.component.scss
+++ b/src/messenger-app/src/app/register/register.component.scss
@@ -2,9 +2,19 @@
     text-align: center;
 }
 
+@media only screen and (max-width: 500px) {
+    .popup-header {
+        display: none;
+    }
+}
+
 .button-container {
     display: flex;
     width: 100%;
     justify-content: center;
-    margin-top: 20%;
+    margin-top: 5%;
+}
+
+.disabled {
+    display: none;
 }
