--- a/src/messenger-app/src/styles.scss
+++ b/src/messenger-app/src/styles.scss
@@ -48,3 +48,9 @@ a:hover {
     text-decoration: none;
     box-shadow: 0 0 0 1px rgba(53,72,91,.1),0 3px 2px rgba(0,0,0,.04),0 7px 5px rgba(0,0,0,.02),0 13px 10px rgba(0,0,0,.02),0 22px 17px rgba(0,0,0,.02);
 }
+
+.profile-picture {
+    width: 5vh;
+    height: 5vh;
+    border-radius: 2.5vh; // make image circular
+}
