made small-profile accept any UserInfo

--- a/src/messenger-app/src/app/small-profile/small-profile.component.html
+++ b/src/messenger-app/src/app/small-profile/small-profile.component.html
@@ -1,6 +1,6 @@
 <a routerLink="/account">
-    <img [src]="requireUser().pfpDataURL" alt="Profile picture" class="profile-picture">
+    <img [src]="userInfo!.pfpDataURL" alt="Profile picture" class="profile-picture">
 </a>
 <a routerLink="/account">
-    <p>{{ requireUser().username }}</p>
+    <p>{{ userInfo!.username }}</p>
 </a>
