--- a/src/messenger-app/src/app/top-bar/top-bar.component.html
+++ b/src/messenger-app/src/app/top-bar/top-bar.component.html
@@ -1,3 +1,3 @@
-<header>
-    <app-small-profile></app-small-profile>
+<header class="neumorphic">
+    <app-small-profile [userInfo]="userInfo"></app-small-profile>
 </header>
