--- a/src/messenger-app/src/app/top-bar/top-bar.component.scss
+++ b/src/messenger-app/src/app/top-bar/top-bar.component.scss
@@ -1,11 +1,12 @@
 header {
     display: flex;
     width: 100%;
-    height: 5vh;
+    align-items: center;
 }
 
 app-small-profile {
     display: flex;
     width: 20vh;
     justify-content: space-around;
+    align-items: center;
 }
