updated styles + contents

--- a/src/messenger-app/src/app/messenger/messenger.component.html
+++ b/src/messenger-app/src/app/messenger/messenger.component.html
@@ -1,2 +1,5 @@
 <app-top-bar></app-top-bar>
-<app-message-list></app-message-list>
+<div class="route-list-container">
+    <app-route-list class="container"></app-route-list>
+    <app-message-list class="container"></app-message-list>
+</div>
