oh my god it actually works
- got the login system working
- fixed bugs with loading USerKey initialisation vectors from json
- removed debug code (i think toJSON might be reserved method???)
- made login form

--- a/src/messenger-app/src/app/login/login.component.html
+++ b/src/messenger-app/src/app/login/login.component.html
@@ -1,1 +1,9 @@
-<p>login works!</p>
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <label for="">
+        Username: <input type="text" name="" id="" formControlName="username">
+    </label>
+    <label for="">
+        Key File: <input type="file" name="" id="" formControlName="keyFile">
+    </label>
+    <button type="submit" [disabled]="!loginForm.valid">Login</button>
+</form>
