added logout button

--- a/src/messenger-app/src/app/top-bar/top-bar.component.html
+++ b/src/messenger-app/src/app/top-bar/top-bar.component.html
@@ -1,3 +1,4 @@
 <header class="neumorphic">
     <app-small-profile [userInfo]="userInfo"></app-small-profile>
+    <button (click)="logout()" class="big-button">Logout</button>
 </header>
