--- a/src/messenger-app/src/app/top-bar/top-bar.component.scss
+++ b/src/messenger-app/src/app/top-bar/top-bar.component.scss
@@ -2,6 +2,7 @@ header {
     display: flex;
     width: 100%;
     align-items: center;
+    justify-content: space-between;
 }
 
 app-small-profile {
