--- a/src/landing/src/css/style.css
+++ b/src/landing/src/css/style.css
@@ -72,6 +72,7 @@ a:hover {
     padding: 5%;
     width: 90%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
 }
 
@@ -85,21 +86,21 @@ a:hover {
 
 .section-container svg:last-child {
     display: block;
-    transform: scaleY(-1);
+    transform: scaleY(-1); /* horizontal flip */
 }
 
 .section-container section img {
-    width: 40%;
+    width: 40vw;
 }
 
 .info-block {
     display: block;
-    width: 40%;
+    width: 500px;
     margin: 0;
 }
 
 .info-block h1 {
-    font-size: min(10vw);
+    font-size: min(4em, 10vw);
 }
 
 .dark.section-container section {
