--- a/src/messenger-app/src/app/message-list/message-list.component.html
+++ b/src/messenger-app/src/app/message-list/message-list.component.html
@@ -1,3 +1,6 @@
+<div class="top-bar">
+    <p>Messages</p>
+</div>
 <div *ngFor="let message of messages" class="message-list-item">
     <p>{{ message.author.username }}</p>
     <p>{{ message.content }}</p>
