updates (too much random stuff to count)

--- a/src/messenger-app/src/app/messenger/messenger.component.html
+++ b/src/messenger-app/src/app/messenger/messenger.component.html
@@ -1,5 +1,5 @@
 <app-top-bar *ngIf="ready"></app-top-bar>
 <div class="route-list-container">
     <app-route-list class="container" *ngIf="ready"></app-route-list>
-    <app-message-list class="container" *ngIf="ready"></app-message-list>
+    <app-message-list class="container" *ngIf="ready" [messages]="messages"></app-message-list>
 </div>
