--- a/src/messenger-app/src/app/route-list/route-list.component.scss
+++ b/src/messenger-app/src/app/route-list/route-list.component.scss
@@ -12,3 +12,10 @@
     font-weight: bold;
     cursor: pointer;
 }
+
+.cross {
+    width: 15px;
+    height: 15px;
+    float: right;
+    cursor: pointer;
+}
