changed urls to .html urls to increase compatibility

--- a/src/messenger-app/src/app/register/register.component.html
+++ b/src/messenger-app/src/app/register/register.component.html
@@ -15,6 +15,6 @@
     </div>
 
     <div class="button-container">
-        <a routerLink="/app" class="big-button" [ngClass]="{'disabled': !downloaded}">Continue</a>
+        <a routerLink="/app.html" class="big-button" [ngClass]="{'disabled': !downloaded}">Continue</a>
     </div>
 </app-popup>
