--- a/src/messenger-app/src/app/small-profile/small-profile.component.html
+++ b/src/messenger-app/src/app/small-profile/small-profile.component.html
@@ -1,6 +1,6 @@
-<a routerLink="/account">
+<a routerLink="/account.html">
     <img [src]="userInfo!.pfpDataURL" alt="Profile picture" class="profile-picture">
 </a>
-<a routerLink="/account">
+<a routerLink="/account.html">
     <p>{{ userInfo!.username }}</p>
 </a>
