--- a/src/messenger-app/src/app/register/register.component.html
+++ b/src/messenger-app/src/app/register/register.component.html
@@ -2,16 +2,26 @@
     <label>
         Username: <input type="text" name="" id="" formControlName="username">
     </label>
-    <!-- <input type="submit" value="" [disabled]="!registerForm.valid"> -->
-    <button type="submit" [disabled]="!registerForm.valid">Register</button>
+    <button type="submit" [disabled]="!registerForm.valid" class="big-button">Register</button>
+    <div *ngIf="username!.invalid && (username?.dirty || username?.touched)">
+        <div *ngIf="username!.errors?.required">
+            Username is required.
+        </div>
+        <div *ngIf="username!.errors?.minLength">
+            Username must be at least one character long.
+        </div>
+        <div *ngIf="username!.errors?.usernameTaken">
+            That username is taken.
+        </div>
+    </div>
 </form>
 <app-popup [shown]="shown">
     <h1 class="popup-header">Registration successful!</h1>
     <p>
-        Welcome to Emissary, {{ username }}! Here is a download link to your very own personal key. It is unique and the <b>only way to access your account</b>, so <b>don't lose it</b> and <b>never share it with anyone</b>.
+        Welcome to Emissary, {{ registerdUsername }}! Here is a download link to your very own personal key. It is unique and the <b>only way to access your account</b>, so <b>don't lose it</b> and <b>never share it with anyone</b>.
     </p>
     <div class="button-container">
-        <a [href]="keyDataURL" [download]="username + '.key.json'" class="big-button" (click)="this.downloaded = true">Download</a>
+        <a [href]="keyDataURL" [download]="registerdUsername + '.key.json'" class="big-button" (click)="this.downloaded = true">Download</a>
     </div>
 
     <div class="button-container">
