--- a/src/messenger-app/src/app/message-list/message-list.component.scss
+++ b/src/messenger-app/src/app/message-list/message-list.component.scss
@@ -1,4 +1,4 @@
-.message-list-item:first-child {
+.messages-container .message-list-item:first-child {
     border-top: 1px solid grey;
 }
 
@@ -9,6 +9,7 @@
     width: 100%;
     height: 5%;
     align-items: center;
+    padding: 1%;
 }
 
 .message-list-item p {
