--- a/src/messenger-app/src/styles.scss
+++ b/src/messenger-app/src/styles.scss
@@ -38,7 +38,7 @@ a:hover {
 .big-button {
     padding: 10px;
     margin: 10px;
-    width: max(10%, 100px);
+    width: min(max(10%, 100px),40vw);
     text-align: center;
     border-radius: 5px;
     background-color: var(--dark);
@@ -66,4 +66,12 @@ app-small-profile {
     width: 20vh;
     justify-content: space-around;
     align-items: center;
+}
+
+input[type="text"] {
+    border: none;
+    background-color: white;
+    border: 1px solid #eaecef;
+    border-radius: 4px;
+    padding: 5px 10px;
 }
