--- a/src/messenger-app/src/styles.scss
+++ b/src/messenger-app/src/styles.scss
@@ -64,6 +64,7 @@ a:hover {
 app-small-profile {
     display: flex;
     width: 20vh;
+    height: 5vh;
     justify-content: space-around;
     align-items: center;
 }
