--- a/src/messenger-app/src/app/message-list/message-list.component.scss
+++ b/src/messenger-app/src/app/message-list/message-list.component.scss
@@ -1,20 +1,26 @@
+.messages-container {
+    height: 86vh;
+    overflow-y: scroll;
+}
+
 .messages-container .message-list-item:first-child {
     border-top: 1px solid grey;
 }
 
 .message-list-item {
     display: flex;
-    border: 1px solid grey;
+    border-bottom: 1px solid grey;
     border-top: 0;
     width: 100%;
-    height: 5%;
     align-items: center;
     padding: 1%;
+    box-sizing: border-box;
 }
 
 .message-list-item p {
     margin: 0;
     padding: 1%;
+    line-break: anywhere;
 }
 
 .message-list-item p:first-child {
@@ -30,6 +36,8 @@
 .top-bar {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding-left: 5%;
     padding-right: 5%;
+    height: 7vh;
 }
