--- a/src/messenger-app/src/app/message-route/message-route.component.html
+++ b/src/messenger-app/src/app/message-route/message-route.component.html
@@ -1,6 +1,9 @@
 <app-top-bar></app-top-bar>
-<app-message-list [messages]="messageRoute!.messages"></app-message-list>
-<div>
+<div class="list-container">
+    <app-route-list></app-route-list>
+    <app-message-list [messages]="messageRoute!.messages" class="list"></app-message-list>
+</div>
+<div class="message-form">
     <form [formGroup]="messageForm" (ngSubmit)="onMessageFormSubmit()">
         <input type="text" name="" id="" formControlName="message">
         <button class="big-button" type="submit">Send</button>
