--- a/src/messenger-app/src/app/route-list/route-list.component.html
+++ b/src/messenger-app/src/app/route-list/route-list.component.html
@@ -18,6 +18,9 @@
         <button type="submit" class="big-button">Add route</button>
     </form>
 </app-popup>
+<div>
+    
+</div>
 <div *ngFor="let route of routes; index as i">
     <app-small-profile [routerLink]="['/route', i]" [userInfo]="route.userInfo"></app-small-profile>
 </div>
