--- a/src/messenger-app/src/app/messenger/messenger.component.html
+++ b/src/messenger-app/src/app/messenger/messenger.component.html
@@ -4,3 +4,4 @@
         <app-route-list *ngIf="ready"></app-route-list>
         <app-message-list class="list" *ngIf="ready" [messages]="messages"></app-message-list>
     </div>
+</div>
