--- a/src/messenger-app/src/app/route-list/route-list.component.scss
+++ b/src/messenger-app/src/app/route-list/route-list.component.scss
@@ -20,3 +20,9 @@
     float: right;
     cursor: pointer;
 }
+
+.route-list {
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+}
