--- a/src/messenger-app/src/app/message-route/message-route.component.html
+++ b/src/messenger-app/src/app/message-route/message-route.component.html
@@ -3,7 +3,7 @@
     <div class="list-container">
         <app-route-list *ngIf="ready"></app-route-list>
         <div>
-            <app-message-list class="list" *ngIf="ready" [messages]="messageRoute!.messages"></app-message-list>
+            <app-message-list *ngIf="ready" [messages]="messageRoute!.messages"></app-message-list>
             <div class="message-form">
                 <form [formGroup]="messageForm" (ngSubmit)="onMessageFormSubmit()">
                     <input type="text" name="" id="" formControlName="message">
