**switched to word key for user login intensifies**

--- a/src/messenger-app/src/app/login/login.component.html
+++ b/src/messenger-app/src/app/login/login.component.html
@@ -6,7 +6,7 @@
         </div>
         <div class="input-label-group">
             <label for="">Key File</label>
-            <input type="file" name="" id="" formControlName="keyFile">
+            <input type="text" name="" id="" formControlName="wordKey">
         </div>
         <button type="submit" class="big-button">Login</button>
         <div *ngIf="loginError" class="warning">
