--- a/src/messenger-app/src/app/login/login.component.html
+++ b/src/messenger-app/src/app/login/login.component.html
@@ -5,7 +5,7 @@
             <input type="text" name="" id="" formControlName="username">
         </div>
         <div class="input-label-group">
-            <label for="">Key File</label>
+            <label for="">Word Key</label>
             <input type="text" name="" id="" formControlName="wordKey">
         </div>
         <button type="submit" class="big-button">Login</button>
