added label to profile picture input

--- a/src/messenger-app/src/app/account/account.component.html
+++ b/src/messenger-app/src/app/account/account.component.html
@@ -1,2 +1,5 @@
 <app-top-bar></app-top-bar>
-<input type="file" name="" id="" [formControl]="pfpControl">
+<form>
+    <label>Set profile picture</label>
+    <input type="file" name="" id="" [formControl]="pfpControl">
+</form>
