--- a/src/landing/src/css/style.css
+++ b/src/landing/src/css/style.css
@@ -15,6 +15,11 @@ body {
     color: var(--dark);
 }
 
+footer {
+    background-color: var(--dark);
+    text-align: center;
+}
+
 h1 {
     font-family: 'Noto sans', sans-serif;
     font-weight: 700;
